--- a/style.css
+++ b/style.css
@@ -1,11 +1,52 @@
 /* The Successful People NEVER quit. */
+/* For less HTTPS requests, this is one large file, as oppose to having multiple files; and I am the only developer on this project.  I still had my own issues in knowing where I was at sometimes; therefore, the pseudo code (especially with the headings/breaking the code into sections, etc.). Yes, I'm becoming to like Python, more, due to it's simplicity and readability; i. e. components. */
 
 /* Reference https://getbem.com/ "BEM — is a methodology that helps you to create reusable components and code sharing in front‑end development" */
 
 /*============================= Generic Styles Section (One Size Fits All Section) =============================*/
+/* Ref. https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_sup_default_css */
+sup {
+    vertical-align: super;
+    font-size: xx-small;
+}
+
+
+.sup2 {
+    vertical-align: super;
+    font-size: small;
+}
+
+.sup3 {
+    vertical-align: super;
+    font-size: medium;
+}
 /* Reference this effect from Dr. Dwight McClure (https://www.quora.com/profile/Dr-Dwight-McClure) & Soaib Haque (https://www.quora.com/profile/Soaib-Haque-1) on quora.com */
 /* Initially, my text/objects with this class are hidden. */ 
+.hide-all { 
+    visibility: hidden; 
+    opacity: 1; 
+    transition: visibility 0s, opacity 0.5s; 
+    text-align: left;
+    font-size: larger;
+}
+
 .hide-me { 
+    visibility: hidden; 
+    opacity: 1; 
+    transition: visibility 0s, opacity 0.5s; 
+    text-align: left;
+    font-size: larger;
+}
+
+.hide-me2 { 
+    visibility: hidden; 
+    opacity: 1; 
+    transition: visibility 0s, opacity 0.5s; 
+    text-align: left;
+    font-size: larger;
+} 
+
+.hide-me3 { 
     visibility: hidden; 
     opacity: 1; 
     transition: visibility 0s, opacity 0.5s; 
@@ -14,26 +55,73 @@
 } 
    
 /* Using universally; but the idea came from when I was targeting the project's technology/technologies used. This shows my hidden text when it's hovered. Highly Referenced Vista Print's article on this one (https://www.vistaprint.com/hub/branding-colors). */ 
+.hover-container:hover .hide-all {
+    visibility: visible;
+    opacity: 1;
+    transition: transform 500ms ease;
+    font-weight: bold;
+    background: linear-gradient(to right, orange, blue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 .hover-container:hover .hide-me {
     visibility: visible;
     opacity: 1;
     transition: transform 500ms ease;
-    font-size: 16px;
-    margin: 0 12px;
     font-weight: bold;
     background: linear-gradient(to right, orange, blue);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.hover-container:hover .hide-me2 {
+    visibility: visible;
+    opacity: 1;
+    transition: transform 500ms ease;
+    font-weight: bold;
+    background: linear-gradient(to right, orange, blue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.hover-container:hover .hide-me3 {
+    visibility: visible;
+    opacity: 1;
+    transition: transform 500ms ease;
+    font-weight: bold;
+    background: linear-gradient(to right, orange, blue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 /* Using universally; but the idea came from when I was targeting the project's technology/technologies used. */
-.getMe {
-    font-size: 24px;
-    margin: 0 12px;
+.show {
     font-weight: bold;
     background: linear-gradient(to right, blue, orange, blue, orange, blue, orange);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.getMe {
+    font-weight: bold;
+    background: linear-gradient(to right, blue, orange, blue, orange, blue, orange);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.getMe2 {
+    font-weight: bold;
+    background: linear-gradient(to right, blue, orange, blue, orange, blue, orange);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.getMe3 {
+    font-weight: bold;
+    background: linear-gradient(to right, blue, orange, blue, orange, blue, orange);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 /* Choice of font to be utilize. */
@@ -53,7 +141,7 @@
 
 /* Header Styles. */
 h1, h2, h3, h4, h5, h6, span {
-    color: #242424;
+    color: #6030b1
     text-align: center;
     line-height: 1.25;
 }
@@ -193,6 +281,7 @@ section:nth-child(even) {
     font-size: 36px;
 }
 
+
 /*============ Navigation Menu Styles ============*/
 /* How the list was made to line up vs. being stack upon one another. */
 .nav__link--list {
@@ -245,6 +334,7 @@ section:nth-child(even) {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 
 /*============ Tech Stack Section ============*/
 /* #techStack {} */
@@ -326,8 +416,8 @@ section:nth-child(even) {
 
 .groovy {
     background: linear-gradient(to right, #000700, red, #000700, orange,#000700, yellow,#000700, green,#000700, blue,#000700, indigo,#000700, violet);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .alt2groovy {
@@ -386,39 +476,28 @@ section:nth-child(even) {
 }
 
 
-/*============ Project Styles ============*/
+/*============ Projects' Styles ============*/
+#projectSection {
+    text-align: left;
+    color: white;
+}
+
 /* Projects' Header */
 .pj {
     font-size: 32px;
-    margin: 0 12px;
+    margin: 0 0 0 7px;
     font-weight: bold;
     background: linear-gradient(to right, blue, orange, blue, orange, blue, orange, blue, orange, blue, orange, blue, orange, blue, orange, blue, orange, blue, orange);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-/* Intro paragraph leading to my projects. */
-.pCool {
-    padding-bottom: 3px;
-    font-size: 20px;
-    margin: 0 12px;
-    font-weight: bold;
-    background: linear-gradient(to right, orange, blue, orange, blue, orange, blue);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+.projects__list {
+    padding-top: 40px;
 }
 
-.project {
+.myProject {
     margin-bottom: 135px;
-}
-
-.project:last-child {
-    margin-bottom: 40px;
-}
-
-.project__img {
-    width: 100%;
-    transition: all 300ms ease;
 }
 
 .project__wrapper {
@@ -448,6 +527,11 @@ section:nth-child(even) {
     opacity: 0.7;
 }
 
+.project__img {
+    width: 100%;
+    transition: all 500ms ease;
+}
+
 .project:hover .project__img {
     transform: scale(2);
     filter: blur(5px);
@@ -455,12 +539,13 @@ section:nth-child(even) {
 
 .project__description {
     position: absolute;
-    top: 40%;
+    top: 50%;
+    left: 90px;
     transform: translateY(100%);
-    max-width: 550px;
+    max-width: 600px;
     z-index: 3;
     opacity: 0;
-    transition: transform 450ms, opacity 300ms;
+    transition: transform 450ms ease, opacity 300ms ease;
 }
 
 .project:hover .project__description {
@@ -468,55 +553,22 @@ section:nth-child(even) {
     transform: translateY(-50%);
 }
 
-.project__list {
-    padding-top: 40px;
-}
-
-
-/* I want to target this title individually. */
-.pt {
-    text-align: center;
+.project__title {
+    font-size: 40px;
     font-weight: bold;
     background: linear-gradient(to right, orange, white, orange, white, orange, white);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.project__description--title {
-    position: relative;
-    left: 45%;
-    font-size: 40px;
-    text-align: center;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 /* I want to target the projects sub-title. */
-.project__description--sub-title {
-    position: relative;
-    left: 45%;
-    padding-bottom: 25px;
+.project__sub-title {
     color: #ffeb4b;
     text-shadow: 0 0 22px firebrick, 0 0 80px firebrick,0 0 120px firebrick, 0 0 160px firebrick, 0 0 200px firebrick;
     font-weight: bold;
     background: linear-gradient(to right, orange, white, orange, white, orange, white);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
-.project__description--tech-stack {
-    position: relative;
-    left: 35px;
-    padding: 16px;
-}
-
-.project__description--links {
-    position: relative;
-    top: 50px;
-    margin-right: 20px 0;
-    text-decoration: none;
-}
-
-.project__description--para {
-    text-align: left;
 }
 
 .info {
@@ -530,11 +582,20 @@ section:nth-child(even) {
     position: relative;
 }
 
-.info2 {
-    position: relative;
-    top: 50%;
-    right: 35px;
+/* Passage about my project. */
+.project__passage {
+    margin: 16px 0;
     background: linear-gradient(to right, purple, gold, purple, gold, purple, gold);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.project__links {
+    font-size: 20px;
+    margin-right: 16px 0;
+    text-decoration: none;
+}
+
+.project:last-child {
+    margin-bottom: 40px;
 }
