--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ sup {
     font-size: xx-small;
 }
 
-
 .sup2 {
     vertical-align: super;
     font-size: small;
@@ -19,109 +18,6 @@ sup {
 .sup3 {
     vertical-align: super;
     font-size: medium;
-}
-/* Reference this effect from Dr. Dwight McClure (https://www.quora.com/profile/Dr-Dwight-McClure) & Soaib Haque (https://www.quora.com/profile/Soaib-Haque-1) on quora.com */
-/* Initially, my text/objects with this class are hidden. */ 
-.hide-all { 
-    visibility: hidden; 
-    opacity: 1; 
-    transition: visibility 0s, opacity 0.5s; 
-    text-align: left;
-    font-size: larger;
-}
-
-.hide-me { 
-    visibility: hidden; 
-    opacity: 1; 
-    transition: visibility 0s, opacity 0.5s; 
-    text-align: left;
-    font-size: larger;
-}
-
-.hide-me2 { 
-    visibility: hidden; 
-    opacity: 1; 
-    transition: visibility 0s, opacity 0.5s; 
-    text-align: left;
-    font-size: larger;
-} 
-
-.hide-me3 { 
-    visibility: hidden; 
-    opacity: 1; 
-    transition: visibility 0s, opacity 0.5s; 
-    text-align: left;
-    font-size: larger;
-} 
-   
-/* Using universally; but the idea came from when I was targeting the project's technology/technologies used. This shows my hidden text when it's hovered. Highly Referenced Vista Print's article on this one (https://www.vistaprint.com/hub/branding-colors). */ 
-.hover-container:hover .hide-all {
-    visibility: visible;
-    opacity: 1;
-    transition: transform 500ms ease;
-    font-weight: bold;
-    background: linear-gradient(to right, orange, blue);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.hover-container:hover .hide-me {
-    visibility: visible;
-    opacity: 1;
-    transition: transform 500ms ease;
-    font-weight: bold;
-    background: linear-gradient(to right, orange, blue);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.hover-container:hover .hide-me2 {
-    visibility: visible;
-    opacity: 1;
-    transition: transform 500ms ease;
-    font-weight: bold;
-    background: linear-gradient(to right, orange, blue);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.hover-container:hover .hide-me3 {
-    visibility: visible;
-    opacity: 1;
-    transition: transform 500ms ease;
-    font-weight: bold;
-    background: linear-gradient(to right, orange, blue);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-/* Using universally; but the idea came from when I was targeting the project's technology/technologies used. */
-.show {
-    font-weight: bold;
-    background: linear-gradient(to right, blue, orange, blue, orange, blue, orange);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.getMe {
-    font-weight: bold;
-    background: linear-gradient(to right, blue, orange, blue, orange, blue, orange);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.getMe2 {
-    font-weight: bold;
-    background: linear-gradient(to right, blue, orange, blue, orange, blue, orange);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.getMe3 {
-    font-weight: bold;
-    background: linear-gradient(to right, blue, orange, blue, orange, blue, orange);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
 }
 
 /* Choice of font to be utilize. */
@@ -141,7 +37,7 @@ sup {
 
 /* Header Styles. */
 h1, h2, h3, h4, h5, h6, span {
-    color: #6030b1
+    color: #6030b1;
     text-align: center;
     line-height: 1.25;
 }
@@ -453,7 +349,7 @@ section:nth-child(even) {
     opacity: 1;
 }
 
-.topSpace .hide-me:hover .tech__name {
+.topSpace:hover .tech__name {
     transform: scale(1);
     opacity: 1;
 }
@@ -471,16 +367,14 @@ section:nth-child(even) {
     transform: scale(1, -1);
     align-items: center;
     padding-top: 8px;
-    box-shadow: 3px 3px 3px 3px rgb(2,0,36);
-    background: radial-gradient(circle, rgba(65, 105, 227, 1.0) 0%, rgba(249, 146, 69, 1.0) 35%, rgba(61, 66, 68, 0.673) 100%); border-radius: 50px;
+    box-shadow: 3px 3px 3px 3px rgb(2, 0, 36);
+    background: radial-gradient(circle, rgba(65, 105, 227, 1.0) 0%, rgba(249, 146, 69, 1.0) 35%, rgba(61, 66, 68, 0.673) 100%);
+    border-radius: 50px;
 }
 
 
 /*============ Projects' Styles ============*/
-#projectSection {
-    text-align: left;
-    color: white;
-}
+/* #projectSection {} •/
 
 /* Projects' Header */
 .pj {
@@ -492,17 +386,17 @@ section:nth-child(even) {
   -webkit-text-fill-color: transparent;
 }
 
-.projects__list {
+.project__list {
     padding-top: 40px;
 }
 
-.myProject {
+.project {
     margin-bottom: 135px;
 }
 
 .project__wrapper {
     display: flex;
-    box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
+    box-shadow: 0 20px 80px rgba(58, 78, 118, 0.45);
     border-radius: 20px;
     overflow: hidden;
     position: relative;
@@ -554,7 +448,8 @@ section:nth-child(even) {
 }
 
 .project__title {
-    font-size: 40px;
+    text-align: left;
+    font-size: 43px;
     font-weight: bold;
     background: linear-gradient(to right, orange, white, orange, white, orange, white);
     -webkit-background-clip: text;
@@ -563,27 +458,48 @@ section:nth-child(even) {
 
 /* I want to target the projects sub-title. */
 .project__sub-title {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 22px;
+    text-align: left;
     color: #ffeb4b;
     text-shadow: 0 0 22px firebrick, 0 0 80px firebrick,0 0 120px firebrick, 0 0 160px firebrick, 0 0 200px firebrick;
     font-weight: bold;
     background: linear-gradient(to right, orange, white, orange, white, orange, white);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+/*Ref. https://stackoverflow.com/questions/9913293/change-text-on-hover-then-return-to-the-previous-text */
+h4:hover span {
+    display: none;
+}
+
+h4:hover:before {
+    content: "HTML5 30.3% | CSS3 55.8% | JavaScript 13.9%";
 }
 
 .info {
-    position: absolute;
-    top: 98%;
-    right: 2%;
     color: #ffeb4b;
-    font-size: 20px;
     text-shadow: 0 0 22px firebrick, 0 0 42px orange, 0 0 62px #ffeb4a, 0 0 52px firebrick, 0 0 72px orange, 0 0 92 #ffeb4a, 0 0 82px firebrick, 0 0 82px orange, 0 0 112px firebrick, 0 0 112px orange, 0 0 142px firebrick, 0 0 142px orange, 0 0 192px firebrick, 0 0 192px orange, 0 0 202px firebrick, 0 0 202px orange;
     -webkit-box-reflect: below 18px linear-gradient(transparent, #000700);
+}
+
+.disappear {
+    visibility: hidden;
     position: relative;
+}
+
+.disappear:after {
+    visibility: visible;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "This text replaces the original.";
 }
 
 /* Passage about my project. */
 .project__passage {
+    text-align: left;
     margin: 16px 0;
     background: linear-gradient(to right, purple, gold, purple, gold, purple, gold);
     -webkit-background-clip: text;
@@ -591,11 +507,15 @@ section:nth-child(even) {
 }
 
 .project__links {
-    font-size: 20px;
-    margin-right: 16px 0;
+    text-align: left;
+    font-size: 24px;
+    margin-right: 21px;
     text-decoration: none;
+    background: linear-gradient(to right, #544478, #ffeb4a, #544478, #ffeb4a, #544478, #ffeb4a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .project:last-child {
-    margin-bottom: 40px;
+    margin-bottom: 50px;
 }
