--- a/style.css
+++ b/style.css
@@ -449,7 +449,7 @@ section:nth-child(even) {
 
 .project__title {
     text-align: left;
-    font-size: 43px;
+    font-size: 50px;
     font-weight: bold;
     background: linear-gradient(to right, orange, white, orange, white, orange, white);
     -webkit-background-clip: text;
@@ -459,14 +459,8 @@ section:nth-child(even) {
 /* I want to target the projects sub-title. */
 .project__sub-title {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 22px;
+    font-size: 28px;
     text-align: left;
-    color: #ffeb4b;
-    text-shadow: 0 0 22px firebrick, 0 0 80px firebrick,0 0 120px firebrick, 0 0 160px firebrick, 0 0 200px firebrick;
-    font-weight: bold;
-    background: linear-gradient(to right, orange, white, orange, white, orange, white);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
 }
 
 /*Ref. https://stackoverflow.com/questions/9913293/change-text-on-hover-then-return-to-the-previous-text */
@@ -476,31 +470,34 @@ h4:hover span {
 
 h4:hover:before {
     content: "HTML5 30.3% | CSS3 55.8% | JavaScript 13.9%";
+    color: none;
+}
+
+.technolgies {
+    color: #ffeb4b;
+    text-shadow: 0 0 22px firebrick, 0 0 80px firebrick,0 0 120px firebrick, 0 0 160px firebrick, 0 0 200px firebrick;
+    font-weight: bold;
+    background: linear-gradient(to right, orange, white, orange, white, orange, white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .info {
+    font-size: 20px;
+    font-weight: 700;
     color: #ffeb4b;
-    text-shadow: 0 0 22px firebrick, 0 0 42px orange, 0 0 62px #ffeb4a, 0 0 52px firebrick, 0 0 72px orange, 0 0 92 #ffeb4a, 0 0 82px firebrick, 0 0 82px orange, 0 0 112px firebrick, 0 0 112px orange, 0 0 142px firebrick, 0 0 142px orange, 0 0 192px firebrick, 0 0 192px orange, 0 0 202px firebrick, 0 0 202px orange;
+    text-shadow: 0 0 22px firebrick, 0 0 42px rgba(255, 166, 0, 0.847), 0 0 62px #ffeb4a, 0 0 52px firebrick, 0 0 72px orange, 0 0 92 #ffeb4a, 0 0 82px firebrick, 0 0 82px orange, 0 0 112px firebrick, 0 0 112px orange, 0 0 142px firebrick, 0 0 142px orange, 0 0 192px firebrick, 0 0 192px orange, 0 0 202px firebrick, 0 0 202px orange;
     -webkit-box-reflect: below 18px linear-gradient(transparent, #000700);
-}
-
-.disappear {
-    visibility: hidden;
-    position: relative;
-}
-
-.disappear:after {
-    visibility: visible;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: "This text replaces the original.";
+    background: linear-gradient(to right, gold);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 /* Passage about my project. */
 .project__passage {
     text-align: left;
-    margin: 16px 0;
+    margin: 22px 0;
+    font-weight: 600;
     background: linear-gradient(to right, purple, gold, purple, gold, purple, gold);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
