--- a/style.css
+++ b/style.css
@@ -252,10 +252,10 @@ section:nth-child(even) {
     background: linear-gradient(to top, #F99242, dark orange);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-  text-align: center;
-  -webkit-animation: glow 0.7s ease-in-out infinite alternate;
-  -moz-animation: glow 0.7s ease-in-out infinite alternate;
-  animation: glow 0.7s ease-in-out infinite alternate;
+    text-align: center;
+    -webkit-animation: glow 0.7s ease-in-out infinite alternate;
+    -moz-animation: glow 0.7s ease-in-out infinite alternate;
+    animation: glow 0.7s ease-in-out infinite alternate;
 }
 
 @-webkit-keyframes glow {
@@ -461,6 +461,9 @@ section:nth-child(even) {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 28px;
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-content: left;
 }
 
 /*Ref. https://stackoverflow.com/questions/9913293/change-text-on-hover-then-return-to-the-previous-text */
@@ -470,27 +473,43 @@ h4:hover span {
 
 h4:hover:before {
     content: "HTML5 30.3% | CSS3 55.8% | JavaScript 13.9%";
-    color: none;
-}
-
-.technolgies {
-    color: #ffeb4b;
-    text-shadow: 0 0 22px firebrick, 0 0 80px firebrick,0 0 120px firebrick, 0 0 160px firebrick, 0 0 200px firebrick;
-    font-weight: bold;
+    font-size: 24px;
+    box-sizing: content-box;
     background: linear-gradient(to right, orange, white, orange, white, orange, white);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-.info {
-    font-size: 20px;
-    font-weight: 700;
+.technolgies {
+    /* Ref. https://stackoverflow.com/questions/15441742/change-last-letter-color */
+    float: left;
+    unicode-bidi: bidi-override;
+    direction: rtl;
+    font-size: 28px;
+}
+
+.technolgies:first-letter {
     color: #ffeb4b;
-    text-shadow: 0 0 22px firebrick, 0 0 42px rgba(255, 166, 0, 0.847), 0 0 62px #ffeb4a, 0 0 52px firebrick, 0 0 72px orange, 0 0 92 #ffeb4a, 0 0 82px firebrick, 0 0 82px orange, 0 0 112px firebrick, 0 0 112px orange, 0 0 142px firebrick, 0 0 142px orange, 0 0 192px firebrick, 0 0 192px orange, 0 0 202px firebrick, 0 0 202px orange;
-    -webkit-box-reflect: below 18px linear-gradient(transparent, #000700);
-    background: linear-gradient(to right, gold);
+    font-weight: bold;
+}
+
+.glow {
+    background: linear-gradient(to top, #F99242, darkorange);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    text-align: center;
+    -webkit-animation: glow 0.3s ease-in-out infinite alternate;
+    -moz-animation: glow 0.3s ease-in-out infinite alternate;
+    animation: glow 0.3s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 .9px firebrick, 0 0 .9px darkorange, 0 0 .9px #F99245, 0 0 .9px #ffeb4b, 0 0 .9px white;
+  }
+  to {
+    text-shadow: 0 0 .82px white, 0 0 .82px #ffeb4b, 0 0 .82px #F99245, 0 0 .82px darkorange, 0 0 .82px firebrick;
+  }
 }
 
 /* Passage about my project. */
@@ -515,4 +534,8 @@ h4:hover:before {
 
 .project:last-child {
     margin-bottom: 50px;
+}
+
+.info {
+    font-size: 18px;
 }
