--- a/style.css
+++ b/style.css
@@ -202,6 +202,33 @@ section:nth-child(even) {
     background: linear-gradient(90deg, rgba(84,68,120,0.7687861271676301) 18%, rgba(0,0,0,1) 63%);
 }
 
+.link__hover-effect:after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 0;
+    bottom: -3px;
+    right: 0;
+    transition: all 300ms ease;
+}
+
+.link__hover-effect--white:after {
+    background-color: white;
+}
+
+.link__hover-effect--black:after {
+    background-color: #000;
+}
+
+.link__hover-effect:hover:after {
+    width: 100%;
+    left: 0;
+}
+
+i:hover {
+    opacity: 0.7;
+}
+
 /* I didn't like the name scheme in the personal logo: because I knew that I would confuse this code for my actual logo (later use); therefore, I change the name scheme to avoid a potential naming conflict, and to practice better semantics regarding myself. THIS IS THE BIG NAME OPENING. */
 .BIG {
     font-size: 24px;
@@ -548,7 +575,6 @@ h4:hover:before {
     background: linear-gradient(to right, #544478, #ffeb4a, #544478, #ffeb4a, #544478, #ffeb4a);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-decoration: none;
 }
 
 .project:last-child {
@@ -557,4 +583,61 @@ h4:hover:before {
 
 .info {
     font-size: 18px;
+}
+
+/*============ Footer Styles ============*/
+footer {
+    text-decoration: none;
+    background-color: #000700;
+}
+
+.footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 8% 0;
+}
+
+.footer__anchor {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.footer__logo--img {
+    width: 70px;
+    height: 70px;
+}
+  
+.footer__logo--img {
+    width: 70px;
+    height: 70px;
+}
+
+.footer__logo--popper {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+    transform: translateX(60px);
+    opacity: 1;
+}
+
+.footer__social--list {
+    width: 100%;
+    max-width: 700px;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 28px;
+}
+  
+.footer__social--link,
+.footer__copyright,
+.footer__logo--popper {
+    color: white;
 }
