--- a/style.css
+++ b/style.css
@@ -92,6 +92,12 @@ section:nth-child(even) {
     width:100%;
 }
 
+/* Smart phones & tablets. */
+@media (max-width: 768px) {
+    nav {
+    height: 68px;
+}
+
 /*=============================================== Specific Styles Section ===============================================*/
 /*============ About Me Section. ============*/
 /* My Signature Header <h2> */
