Ditching Bootstrap. Ref. https://threkk.medium.com/how-to-make-a-css-only-hamburger-menu-f7ad41e13399

--- a/style.css
+++ b/style.css
@@ -208,6 +208,10 @@
 
     /*============ Navigation Menu Styles ============*/
     /* How the list was made to line up vs. being stack upon one another. */
+    nav input[type='checkbox'], nav label {
+        display: none;
+    }
+    
     .nav__link--list {
         display: flex;
     }
