--- a/style.css
+++ b/style.css
@@ -145,6 +145,49 @@
         align-items: center;
     }
 
+    /* Ref. yochans (https://codepen.io/yochans) */
+    .picThis {
+        position: relative;
+        width: 500px;
+        max-width: 100%;
+        height: 400px;
+    }
+    
+    .cldntpck {
+        position: absolute;
+        width: 100%;
+        opacity: 0;
+        animation: change-img-anim 30s infinite;
+    }
+    
+    .cldntpck:nth-of-type(1) {
+        animation-delay: 0s;
+    }
+
+    .cldntpck:nth-of-type(2) {
+        animation-delay: 7s;
+    }
+
+    .cldntpck:nth-of-type(3) {
+        animation-delay: 14s;
+    }
+
+    .cldntpck:nth-of-type(4) {
+        animation-delay: 21s;
+    }
+
+    .cldntpck:nth-of-type(5) {
+        animation-delay: 28s;
+    }
+    
+    @keyframes change-img-anim {
+        0%{ opacity: 0;}
+        20%{ opacity: 1;}
+        40%{ opacity: 1;}
+        60%{ opacity: 1;}
+        100%{ opacity: 0;}
+    }
+
     .about-me__info--passage {
         font-size: 18px;
         margin-top: 2px;
