--- a/style.css
+++ b/style.css
@@ -88,8 +88,8 @@
         background-image:url('./assets/img/section__bg.jpeg');
         opacity: 0.9;
         background-size:100%;
-        background-repeat: repeat-y;
-        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-attachment:scroll;
         height:100%;
         width:100%;
     }
@@ -822,19 +822,20 @@
         width: 82px;
         height: 82px;
     }
-    
-    .footer__logo--img {
-        width: 82px;
-        height: 82px;
-    }
 
     .footer__logo--popper {
         position: absolute;
         right: 0;
         top: 36px;
-        font-weight: 700;
+        font-weight: 900;
+        font-size: larger;
         opacity: 0;
         transition: all 300ms ease;
+        text-align: center;
+        -webkit-animation: glow 1.3s ease-in-out infinite alternate;
+        -moz-animation: glow 1.3s ease-in-out infinite alternate;
+        animation: glow 1.3s ease-in-out infinite alternate;
+        text-decoration: none;
     }
 
     .footer__anchor:hover .footer__logo--popper {
