--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@
     /* My Signature Header <h2> */
     .about-me__info--subtitle {
         padding: 7px;
+        font-size: 0.8em;
         background: linear-gradient(to right, #71713a, #544478);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -235,7 +236,8 @@
     }
 
     .about-me__info--passage {
-        font-size: 1.1em;
+        color: #6030b1;
+        font-size: 0.8em;
         margin-top: 2px;
         margin-bottom: 12px;
     }
@@ -330,22 +332,18 @@
         opacity: 0;
     }
     
-    #menu__toggle ~ .sayHello {
-        z-index: -1;
-    }
-    
     #menu__toggle:checked ~ .menu__btn > span {
-        transform: rotate(360deg);
+        transform: rotate(0deg);
     }
 
     #menu__toggle:checked ~ .menu__btn > span::before {
         top: 0;
-        transform: rotate(82deg);
+        transform: rotate(0deg);
     }
 
     #menu__toggle:checked ~ .menu__btn > span::after {
         top: 0;
-        transform: rotate(570deg);
+        transform: rotate(0deg);
     }
 
     #menu__toggle:checked ~ .hamburger__sandwich {
@@ -372,7 +370,7 @@
         position: absolute;
         width: 100%;
         height: 2px;
-        background-color: blue; 
+        background: linear-gradient(to right, #71713a, #544478); 
         transition-duration: .25s;
     }
 
@@ -1167,6 +1165,7 @@ section:nth-child(even) {
 }
 
 .about-me__info--passage {
+    color: #6030b1;
     font-size: 1.1em;
     margin-top: 2px;
     margin-bottom: 12px;
@@ -1228,6 +1227,10 @@ section:nth-child(even) {
 }
 
 /*============ Navigation Menu Styles ============*/
+/* Getting rid of the checkbox's view */
+nav input[type='checkbox'], nav label {
+    display: none;
+}
 /* How the list was made to line up vs. being stack upon one another. */
 .nav__link--list {
     display: flex;
@@ -1306,8 +1309,8 @@ section:nth-child(even) {
     margin: 0 12px;
     font-weight: bold;
     background: linear-gradient(to right, #71713a, #544478, #71713a, #544478);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .row {
