--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@
     }
 
     .container {
-        padding: 50px 0px;
+        padding: 3.125rem 0;
     }
 
     /* Header Styles. */
@@ -169,18 +169,18 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        max-width: 320px;
+        max-width: 20em;
         margin: 0 auto;
         text-align: center;
     }
 
     .about-me__picture--mask {
-        width: 100px;
-        height: 100px;
+        width: 6.25em;
+        height: 6.25em;
         border-radius: 50%;
         overflow: hidden;
-        box-shadow: 0 8px 16px rgba(0,0,0, 0.16);
-        margin-bottom: 12px;
+        box-shadow: 0 0.5em 1em rgba(0,0,0, 0.16);
+        margin-bottom: 0.75em;
     }
 
     .about-me__picture {
@@ -188,16 +188,16 @@
         
         /* Zoomed Picture In. */
         transform: scale(1.23);
-        padding-bottom: 8px;
+        padding-bottom: 0.5em;
         align-items: center;
     }
 
     /* Ref. yochans (https://codepen.io/yochans) */
     .picThis {
         position: relative;
-        width: 100px;
+        width: 6.25em;
         max-width: 100%;
-        height: 100px;
+        height: 6.25em;
     }
     
     .cldntpck {
@@ -238,24 +238,24 @@
     .about-me__info--passage {
         color: #6030b1;
         font-size: 0.8em;
-        margin-top: 2px;
-        margin-bottom: 12px;
+        margin-top: 0.125em;
+        margin-bottom: 0.75em;
     }
 
     /* Bold and Colored letterimg in Intro. paragraph in "About Me" Section. */
     .emph {
         font-weight: 700;
         background: linear-gradient(to right, #71713a, #544478);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
 
     .emph2 {
         font-weight: 900;
         text-decoration: underline;
         background: linear-gradient(to right, #71713a, #544478);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
 
     .about-me__img--container {
@@ -304,28 +304,16 @@
         height: 100%;
         width: 100%;
         font-size: small;
-        max-width: 320px;
+        max-width: 20em;
         margin: 0 auto;
         display: flex;
         justify-content:center;
         align-items: center;
     }
 
-    .nav__link--anchor {
-        margin: 0 3px;
-        color: #242424;
-        text-decoration: none;
-        font-weight: 700;
-    }
-    
-    /* Contact Button Style.*/
-    .nav__link--anchor-primary {
-        background: linear-gradient(to right, #71713a, #544478);
-        padding: 4px 10px;
-        border-radius: 50px;
-        border-width: 50%;
-        color: white;
-        transition: all 300ms ease;
+    .np {
+        color: orange;
+        font-size: 1.2em;
     }
 
     #menu__toggle {
@@ -344,6 +332,7 @@
     #menu__toggle:checked ~ .menu__btn > span::after {
         top: 0;
         transform: rotate(0deg);
+        background: orange;
     }
 
     #menu__toggle:checked ~ .hamburger__sandwich {
@@ -355,10 +344,10 @@
         display: flex;
         align-items: center;
         position: fixed;
-        top: 35px;
-        left: 280px;
-        width: 26px;
-        height: 26px;
+        top: 2.188rem;
+        left: 17.5rem;
+        width: 1.688rem;
+        height: 1.688rem;
         cursor: pointer;
         z-index: 1;
     }
@@ -369,19 +358,21 @@
         display: block;
         position: absolute;
         width: 100%;
-        height: 2px;
+        height:0.125em;
         background: linear-gradient(to right, #71713a, #544478); 
         transition-duration: .25s;
     }
 
     .menu__btn > span::before {
         content: '';
-        top: -5px;
+        top: -0.313em;
     }
 
     .menu__btn > span::after {
         content: '';
-        top: 5px;
+        top: 0.313em;
+        background: linear-gradient(to right, #71713a, #544478); 
+        transition-duration: .25s;
     }
     
     .hamburger__sandwich {
@@ -391,28 +382,27 @@
         visibility: hidden;
         top: 0;
         left: -100%;
-        width: 320px;
+        width: 20rem;
         height: 35%;
         margin: 0;
-        padding: 80px 0;
+        padding: 5rem 0;
         list-style: armenian;
-        transition-duration: .25s;
+        transition-duration: 0.25s;
         background-image:url('./assets/img/me3.jpeg');
         opacity: 1;
         background-size:60% 35%;
-        background-repeat:repeat-x;
         background-attachment: fixed;
     }
     
     .burger__topping {
         display: block;
         flex-direction: column-reverse;
-        padding: 12px 24px;
+        padding: 0.75em 1.5em;
         font-family: 'Roboto', sans-serif;
         font-size: 1.25em;
         font-weight: 600;
         text-decoration: none;
-        transition-duration: .25s;
+        transition-duration: 0.25s;
         justify-content: left;
     }
     
@@ -424,16 +414,15 @@
     /* Anchor styles. */
     .nav__link--anchor {
         margin: 0%;
-        color: #242424;
         text-decoration: none;
         font-weight: 700;
     }
 
     /* Contact Button Style.*/
     .nav__link--anchor-primary {
-        background: linear-gradient(to right, #71713a, #544478);
-        padding: 3px 9px;
-        border-radius: 50px;
+        background: linear-gradient(to top, orange, white);
+        padding: 0.188em 0.563em;
+        border-radius: 3.125em;
         color: white;
         transition: all 300ms ease;
         margin-left: 0%;
@@ -1059,6 +1048,7 @@ sup {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    color: #6030b1;
 }
 
 .container {
@@ -1278,6 +1268,8 @@ nav input[type='checkbox'], nav label {
 /* How the list was made to line up vs. being stack upon one another. */
 .nav__link--list {
     display: flex;
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 /* Anchor styles. */
@@ -1286,6 +1278,7 @@ nav input[type='checkbox'], nav label {
     color: #242424;
     text-decoration: none;
     font-weight: 700;
+    font-size: 1rem;
 }
 
 /* Contact Button Style.*/
